[gd_scene load_steps=11 format=3 uid="uid://b2nvr4o7ldik8"]

[ext_resource type="Texture2D" uid="uid://ch3xb76j3xfy4" path="res://podeum.png" id="1_2wvic"]
[ext_resource type="Script" uid="uid://dll0ogmtfeeix" path="res://lobby_scene.gd" id="1_tftiq"]
[ext_resource type="Texture2D" uid="uid://em5w6ejwjoys" path="res://set_me.png" id="2_1gg6n"]
[ext_resource type="Texture2D" uid="uid://cwe7y4l40ww0a" path="res://pm.png" id="2_tftiq"]
[ext_resource type="Texture2D" uid="uid://dmhx7suuvesvb" path="res://littlepoyo.png" id="3_1gg6n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x4164"]
atlas = ExtResource("2_1gg6n")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ldoj"]
atlas = ExtResource("2_1gg6n")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ein8w"]
atlas = ExtResource("2_1gg6n")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gm5bj"]
atlas = ExtResource("2_1gg6n")
region = Rect2(96, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_g30ku"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4164")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ldoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ein8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gm5bj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tftiq")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1157.0
offset_bottom = 652.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 306.0
offset_bottom = 274.0

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
text = "Address: 127.0.0.1"
editable = false

[node name="TextEdit2" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
text = "Players Connected: 4"
editable = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="VBoxContainer"]
texture_filter = 1
position = Vector2(373, 98)
scale = Vector2(4.07813, 3.375)
sprite_frames = SubResource("SpriteFrames_g30ku")
frame_progress = 0.219685

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/AnimatedSprite2D"]
offset_left = 12.0
offset_top = -10.0
offset_right = 16856.0
offset_bottom = 1351.0
scale = Vector2(0.0105835, 0.0131092)
theme_override_font_sizes/normal_font_size = 1000
text = "Set me!"

[node name="TextEdit3" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
text = "Name: "

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 388.0
offset_top = 286.0
offset_right = 732.0
offset_bottom = 625.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="back" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "<"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_2wvic")
expand_mode = 4
stretch_mode = 4

[node name="sorcerer" type="Sprite2D" parent="PanelContainer/HBoxContainer/VBoxContainer"]
visible = false
texture_filter = 1
position = Vector2(148, 136)
scale = Vector2(8.61765, 9.4)
texture = ExtResource("2_tftiq")
hframes = 52

[node name="slime" type="Sprite2D" parent="PanelContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
position = Vector2(146, 81)
scale = Vector2(8.61765, 9.4)
texture = ExtResource("3_1gg6n")
hframes = 23

[node name="Button" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Ready"

[node name="forward" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = ">"

[connection signal="pressed" from="PanelContainer/HBoxContainer/back" to="." method="_on_movement_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/forward" to="." method="_on_movement_pressed"]
